# GA-Transformer-Geometry

./: .gitignore  README.md  monograph_ga_learning.tex  pyproject.toml  run_book_figures.py
layer_time_ga/: __init__.py  algebra.py  curvature.py  decomposition.py
tutorials_ga_learning/: ch05_rotations_without_matrices.ipynb  ch06_what_a_layer_does.ipynb  ch08_eigenvalue_story.ipynb  ch09_when_order_matters.ipynb  ch10_walking_in_circles.ipynb  ch13_diagnosing_and_steering.ipynb
